--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-gesture-handler": "^1.5.6",
     "react-native-gifted-chat": "^0.13.0",
     "react-native-keyboard-spacer": "^0.4.1",
+    "react-native-paper": "^3.8.0",
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-web": "~0.11.7",
